--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "streamlit-folium>=0.16.0",
     "plotly>=5.18.0",
     "numpy>=1.26.3",
+    "gspread (>=6.2.1,<7.0.0)",
+    "openpyxl (>=3.1.5,<4.0.0)",
 ]
 
 [tool.poetry]
