--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ dependencies = [
     "numpy>=1.26.3",
     "gspread (>=6.2.1,<7.0.0)",
     "openpyxl (>=3.1.5,<4.0.0)",
+    "boto3>=1.34.0",
+    "pyarrow>=14.0.2",
+    "s3fs>=2024.2.0",
 ]
 
 [tool.poetry]
