--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "boto3>=1.34.0",
     "pyarrow>=14.0.2",
     "s3fs>=2024.2.0",
+    "dotenv (>=0.9.9,<0.10.0)",
 ]
 
 [tool.poetry]
